Features under the section marked 'Current' are completed but pending release as a gem. If you need any of these, you'll need to use the latest source from the git repository.

Features under a numbered section are complete and available in the Wrest gem.

== Current
 * GH#96 Naive implementation of asynchronous requests using Eventmachine

== 1.3.0
 * GH#95 Asynchronous requests on Wrest::Uri.

== 1.2.1 
 * GH#91 Remove dependency on tzinfo

== 1.2.0 
 * GH#80 Add a convenience API to make it easy to use the existing URI callback API

== 1.1.0
 * Caching support introduced. Includes Memcached support for the cache store. (GH# 69, 83, 87)
 
== 1.0.2
 * GH#12 Post Multipart support when using the Patron adapter
 * GH#72 Response code checkers: ok?, redirect?, created? etc.
 * GH#85 Do not auto-load Nokogiri/libxml-ruby and remove warnings at startup
 * GH#79 Update Patron version.

== 1.0.1
 * GH#61 Option propagate while converting uri to UriTemplate and back.
 * GH#64 Removed Caching.
 * GH#32 Callback for response status codes.
 * GH#53 Add to_uri_template helper to String
 * GH#12 Add Post/Put Multipart support when using the Patron adapter
 * GH#72 Response code checkers: ok?, redirect?, created? etc.

== 1.0.0
 * GH#56 Detailed Net::HTTP debug output option added to Wrest::Native:Request.
 * GH#60 Wrest debug log arrow direction changed to be consistent with Net::HTPP debug log
 * GH#59 follow_redirects_limit is off by one
 * GH#24 Add support for xpath based filtering of xml response bodies to the response chain
 * GH#46 Response.deserialise for Json responses
 * GH#52 Wrest console (bin/wrest) fails on 1.9.2
 * GH#55 Fix connection.verify_mode for Net::HTTP https connection to VERIFY_PEER
 * GH#57 Feature #24 doesn't autoload correctly
 
== 1.0.0.beta7
 * GH#46 Response.deserialise for Json responses

== 1.0.0.beta6
 * GH#35 Wrest::UriTemplate extensions swallow existing path
 * GH#41 Make Hash core_ext opt out
 
== 1.0.0.beta5