@@ -4,6 +4,7 @@ Features under a numbered section are complete and available in the Wrest gem.
 
 == Current
  * GH#96 Naive implementation of asynchronous requests using Eventmachine
+ * GH#93 Since Wrest::Response is immutable, the results of Response#deserialise are cached
 
 == 1.3.0
  * GH#95 Asynchronous requests on Wrest::Uri.
